--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation: ^4.8.1
   persistent_bottom_nav_bar: ^5.0.2
   provider: ^6.1.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
