--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   provider: ^6.1.1
   carousel_slider: ^4.2.1
+  webview_flutter: ^4.7.0
+  expandable_text: ^2.3.0
 
 dev_dependencies:
   flutter_test:
