--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   carousel_slider: ^4.2.1
   webview_flutter: ^4.7.0
   expandable_text: ^2.3.0
+  flutter_local_notifications: ^16.3.3
 
 dev_dependencies:
   flutter_test:
